<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name">Ayllu</string>
    <string name="login">Login</string>
    <string name="identificacion">Identificación</string>
    <string name="contrasena">Contraseña</string>
    <string name="mostrarContrasena">Mostrar contraseña</string>
    <string name="login_user_process_authenticate">Iniciando Sesión</string>
    <string name="login_user_process_message">Por favor espere…</string>
    <string name="item_navbar_monitor_recoder">REGISTRAR MONITOR</string>
    <string name="item_navbar_monitor_list">MONITORES</string>
    <string name="item_menu_monitoring">Monitorear</string>
    <string name="item_menu_exit">Salir</string>
    <string name="registration_form_id">Identificación</string>
    <string name="registration_form_name">Nombre</string>
    <string name="registration_form_surname">Apellido</string>
    <string name="registration_form_password">Contraseña</string>
    <string name="registration_form_confpassword">Confirmar contraseña</string>
    <string name="registration_form_button_record">Registrar</string>
    <string name="registration_form_alert_invalid_field">Campo inválido</string>
    <string name="registration_form_alert_empty_field">Campo vacío</string>
    <string name="registration_form_alert_password">Debe contener máyusculas, minúsulas, dígitos y un tamaño mayor a 8 caracteres</string>
    <string name="registration_form_alert_different_passwords">Las contraseñas no coinciden</string>
    <string name="registration_form_process_shipping_status">Registrando monitor</string>
    <string name="registration_form_process_message">Por favor espere …</string>
    <string name="registration_form_process_successful_message">Registro adicionado</string>
    <string name="registration_form_process_error_message">Se produjo un error</string>
    <string name="registration_form_process_message_server">No se pudo conectar al servidor</string>
    <string name="item_menu_edit_monitor">Editar monitor</string>
    <string name="item_menu_disable_monitor">Deshabilitar monitor</string>
    <string name="item_cardview_user_name">Nombre</string>
    <string name="item_cardview_user_surname">Apellido</string>
    <string name="item_cardview_user_id">Identificación</string>
    <string name="process_message_question">¿Está seguro de deshabilitar al monitor?</string>
    <string name="process_message_title_alert">Advertencia</string>
    <string name="process_message_disable_monitor">Deshabilitando al monitor</string>
    <string name="process_message">Por favor espere …</string>
    <string name="process_successful_message">Monitor deshabilitado</string>
    <string name="process_error_message">No se encontraron datos</string>
    <string name="process_message_server">No se pudo conectar al servidor</string>
    <string name="title_activity_edit_monitor">Editar monitor</string>
    <string name="edit_form_id">Identificación</string>
    <string name="edit_form_name">Nombre</string>
    <string name="edit_form_surname">Apellido</string>
    <string name="edit_form_password">Contraseña</string>
    <string name="edit_form_confpassword">Confirmar contraseña</string>
    <string name="edit_form_alert_invalid_field">Campo inválido</string>
    <string name="redit_form_alert_empty_field">Campo vacío</string>
    <string name="edit_form_alert_password">Debe contener máyusculas, minúsulas, dígitos y un tamaño mayor a 8 caracteres</string>
    <string name="edit_form_alert_different_passwords">Las contraseñas no coinciden</string>
    <string name="edit_form_process_message_update_monitor">Actualizando monitor</string>
    <string name="edit_form_process_message">Por favor espere …</string>
    <string name="edit_form_process_successful_message">Monitor actualizado</string>
    <string name="edit_form_process_error_message">Se produjo un error</string>
    <string name="edit_form_process_message_server">No se pudo conectar al servidor</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">ELEGIR</string>
    <string name="start">INICIO</string>
    <string name="monitoring_menu_message_exit">¿Quieres Salir?</string>
    <string name="monitoring_menu_message_upload">Hay monitoreos registrados sin conexión a internet, ¿Desea subirlos ahora?</string>
    <string name="slide_1_title">REGISTRA UN MONITOREO</string>
    <string name="slide_1_desc">Recorre, registra y monitorea el estado de Conservación del QHAPAQ ÑAN</string>
    <string name="titleListMonitoring">Monitoreo Qhapaq Ñan</string>
    <string name="descriptionInfoListMonitoring">Por el momento, no hay monitoreos</string>
    <string name="descriptionInfoListMonitoringNegative">No hay monitoreos para la selección actual</string>
    <string name="descriptionTramo">TRAMO</string>
    <string name="descriptionSubtramo">SUBTRAMO</string>
    <string name="descriptionSeccion">SECCIÓN</string>
    <string name="descriptionPropiedad">PROPIEDAD NOMINADA</string>
    <string name="itemCardViewFecha">FECHA:</string>
    <string name="itemCardViewLatitud">LATITUD:</string>
    <string name="itemCardViewLongitud">LONGITUD:</string>
    <string name="itemCardViewVariable">VARIABLE:</string>
    <string name="itemCardViewFactor">FACTOR:</string>
    <string name="itemCardViewDescriptionPrueba">Imagen del monitoreo</string>
    <string name="titleListMonitoringDialog">INFORMACIÓN</string>
    <string name="titleListMonitoringDialogError">ERROR</string>
    <string name="descriptionListMonitoringDialog">Selecciona un área para registrar un monitoreo</string>
    <string name="opcionListMonitoringDialog">HECHO</string>
    <string name="opcion_list_monitoring_dialog_acept">ACEPTAR</string>
    <string name="opcion_list_monitoring_dialog_cancel">CANCELAR</string>
    <string name="opcion_list_monitoring_dialog_ok">OK</string>
    <string name="list_monitoring_process_message_search">Buscando monitoreos</string>
    <string name="list_monitoring_process_message">Por favor espere …</string>
    <string name="list_monitoring_process_message_server">No se pudo conectar al servidor</string>
    <string name="list_monitoring_title_dialog_offline">Monitoreo sin conexión a internet</string>
    <string name="list_monitoring_description_dialog_offline">Hay un paquete de datos disponible</string>
    <string name="list_monitoring_description_dialog_offline_question">¿Desea utilizarlos?</string>
    <string name="list_monitoring_card_view_item_property">P. NOMINADA</string>
    <string name="list_monitoring_card_view_item_variable">VARIABLE</string>
    <string name="list_monitoring_card_view_item_date">FECHA</string>
    <string name="list_monitoring_card_view_item_latitude">LATITUD</string>
    <string name="list_monitoring_card_view_item_length">LONGITUD</string>
    <string name="titleDetailMonitoring">Monitoreo</string>
    <string name="itemCardViewPropiedad">PROPIEDAD NOMINADA:</string>
    <string name="itemCardViewCoordenadas">COORDENADAS:</string>
    <string name="itemCardViewMonitor">MONITOR:</string>
    <string name="itemCardViewRepercusiones">REPERCUSIONES:</string>
    <string name="itemCardViewOrigen">ORIGEN:</string>
    <string name="itemCardViewPorcentaje">PORCENTAJE DE APARICIÓN:</string>
    <string name="itemCardViewFrecuencia">FRECUENCIA DE APARICIÓN:</string>
    <string name="titleDetailMonitoringDialog">INFORMACIÓN</string>
    <string name="descriptionDetailMonitoringDialog">No puedes monitorear el punto dos veces en el mismo día</string>
    <string name="monitoring_detail_dialog_option_positive">HECHO</string>
    <string name="monitoring_detail_rep_positive">Positiva</string>
    <string name="monitoring_detail_rep_negative">Negativa</string>
    <string name="monitoring_detail_rep_current">Actual</string>
    <string name="monitoring_detail_rep_potential">Potencial</string>
    <string name="monitoring_detail_org_internal">Interno</string>
    <string name="monitoring_detail_org_external">Externo</string>
    <string name="titleFormRegistrationMonitoring">Formulario del Monitoreo</string>
    <string name="titleFormRepercusiones">REPERCUSIONES:</string>
    <string name="titleFormOrigen">ORIGEN:</string>
    <string name="titleFormPorcentaje">PORCENTAJE DE APARICIÓN:</string>
    <string name="titleFormFrecuencia">FRECUENCIA DE APARICIÓN:</string>
    <string name="descriptionButtonFactor">FACTOR</string>
    <string name="descriptionButtonVariable">VARIABLE</string>
    <string name="titlePointDialog">Establece las coordenadas para el punto de afectación</string>
    <string name="latitudePointDialog">LATITUD</string>
    <string name="lengthPointDialog">LONGITUD</string>
    <string name="optionPositivasRepercusiones">Positiva</string>
    <string name="optionNegativasRepercusiones">Negativa</string>
    <string name="optionActualesRepercusiones">Actual</string>
    <string name="optionPotencialesRepercusiones">Potencial</string>
    <string name="optionInternoOrigen">Interno</string>
    <string name="optionExternoOrigen">Externo</string>
    <string name="optionPorcentaje">[1%-10%] RESTRINGIDA</string>
    <string name="optionFrecuencia">UNA ÚNICA VEZ</string>
    <string name="summary_item_title_factor">FACTOR:</string>
    <string name="summary_item_title_variable">VARIABLE:</string>
    <string name="successfulRecordTitle">REGISTRO EXITOSO</string>
    <string name="successfulRecordImageDescription">OK</string>
    <string name="successfulRecordMonitoringDescription">El monitoreo se ha registrado sin ningún inconveniente</string>
    <string name="graph_percentage_frequency_subtitle_horizontal">Fecha del monitoreo</string>
    <string name="graph_percentage_frequency_subtitle_vertical">P\nu\nn\nt\na\nj\ne</string>
    <string name="graph_institutional_response_evaluation">Evaluación</string>
    <string name="graph_institutional_response_personal">Personal</string>
    <string name="graph_institutional_response_time">Tiempo</string>
    <string name="graph_institutional_response_budget">Presupuesto</string>
    <string name="graph_institutional_response_means">Recursos</string>
    <string name="graph_institutional_response_knowledge">Conocimiento</string>
    <string name="graph_institutional_response_options_title">OPCIONES</string>
    <string name="graph_institutional_response_info_title">INFORMACIÓN DEL MONITOREO</string>
    <string name="settings_app_submodule_title_monitoring_offline">MONITOREO SIN CONEXIÓN</string>
    <string name="settings_app_submodule_option_title_delete_list">Borrar listado de puntos</string>
    <string name="settings_app_submodule_option_description_delete_list">Libera memoria eliminando de puntos que no necesites.</string>
    <string name="settings_app_submodule_option_title_select_list">Elegir listado de puntos</string>
    <string name="settings_app_submodule_option_description_select_list">Determina el lugar que quieres monitorear.</string>
    <string name="settings_app_submodule_title_report">REPORTE</string>
    <string name="settings_app_submodule_option_title_report">Elige los puntos a reportar</string>
    <string name="settings_app_submodule_option_description_report">Determina el lugar que quieres reportar.</string>
    <string name="settings_app_submodule_title_general">GENERAL</string>
    <string name="settings_app_submodule_option_title_logout">Cerrar Sesión</string>
    <string name="settings_app_submodule_option_description_logout">Finalizar el uso de la aplicación para el usuario actual.</string>
    <string name="settings_app_submodule_option_title_about">Acerca de la aplicación</string>
    <string name="settings_app_submodule_option_description_about">Información general de la aplicación.</string>
    <string name="settings_app_submodule_option_title_admin">Administrador</string>
    <string name="settings_app_submodule_option_description_admin">Ingresa al modo Administrador.</string>
</resources>