<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_grafica_respuesta_institucional">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graph_percentage_frequency_subtitle_horizontal"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="10dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="10dp"
                    android:paddingStart="0dp"
                    android:scrollbars="horizontal"
                    android:text="@string/graph_percentage_frequency_subtitle_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <include layout="@layout/content_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="start"
                android:background="@color/colorPrimaryLight"
                android:padding="5dp"
                android:text="@string/graph_institutional_response_options_title"
                android:textColor="@color/colorTextIcons"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/grup"
                android:checkedButton="@+id/radio_eval">

                <RadioButton android:id="@+id/radio_eval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_evaluation"
                    android:onClick="onRadioButtonClicked"
                    android:checked="false"
                    android:textSize="14sp" />
                <RadioButton android:id="@+id/radio_per"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_personal"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="14sp" />
                <RadioButton android:id="@+id/radio_tiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_time"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="14sp" />
                <RadioButton android:id="@+id/radio_presu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_budget"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="14sp" />
                <RadioButton android:id="@+id/radio_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_means"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_institutional_response_knowledge"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryLight"
                android:padding="5dp"
                android:text="@string/graph_institutional_response_info_title"
                android:textColor="@color/colorTextIcons"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_factor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_factor_small"
                android:drawableStart="@drawable/ic_factor_small"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:layout_gravity="start"
                android:text="@string/summary_item_title_factor"
                android:textColor="@color/colorIconCardView"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextCardView"
                android:textSize="12sp"/>

            <View
                android:id="@+id/divisor7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:alpha=".5"
                android:background="@color/colorDivider"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_title_variable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_variable_small"
                android:drawableStart="@drawable/ic_variable_small"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:layout_gravity="start"
                android:text="@string/summary_item_title_variable"
                android:textColor="@color/colorIconCardView"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextCardView"
                android:textSize="12sp"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
