<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashBackground"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/iv_type_record"
        android:layout_width="@dimen/img_width_height_high"
        android:layout_height="@dimen/img_width_height_high"
        android:contentDescription="@string/successfulRecordImageDescription"
        android:src="@drawable/ic_positive" />

    <TextView
        android:id="@+id/tv_title_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/successfulRecordTitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/successfulRecordMonitoringDescription"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_desc" />
</LinearLayout>